# ha-weather-jma

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: auto-test.yml  hacs.yml  hassfest.yml
custom_components/ha_weather_jma/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  parser.py  sensor.py  strings.json  weather.py
custom_components/ha_weather_jma/translations/: en.json  ja.json
tests/: __init__.py  support.py  test_api.py  test_config_flow.py  test_coordinator.py  test_entities.py  test_live_warning_xml.py  test_parser.py
tests/fixtures/: amedas_observation_normal.json  amedastable_minimal.json  area_minimal.json  forecast_missing_fields.json  forecast_normal.json  observation_missing_fields.json  warning_xml_current.xml  warning_xml_heavyrain_level4.xml  warning_xml_landslide_level4.xml  warning_xml_stormsurge_level5.xml
